[gd_scene load_steps=2 format=3 uid="uid://dd2nwq7648lqr"]

[ext_resource type="Script" uid="uid://di0nghc7li16g" path="res://StaffPage.gd" id="1_07qji"]

[node name="StaffPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_07qji")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(350, 600)
offset_right = 40.0
offset_bottom = 40.0

[node name="CardsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="DescriptionPanel" type="Panel" parent="."]
offset_left = 363.0
offset_top = 50.0
offset_right = 863.0
offset_bottom = 550.0
grow_horizontal = 0

[node name="NameLabel" type="Label" parent="DescriptionPanel"]
layout_mode = 0
offset_left = 11.0
offset_right = 51.0
offset_bottom = 23.0

[node name="BioLabel" type="Label" parent="DescriptionPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 33.0
offset_right = 51.0
offset_bottom = 56.0

[node name="AccomplishmentsLabel" type="Label" parent="DescriptionPanel"]
layout_mode = 2
offset_left = 238.0
offset_top = -19.0
offset_right = 638.0
offset_bottom = 4.0

[node name="HobbiesLabel" type="Label" parent="DescriptionPanel"]
layout_mode = 2
offset_left = 238.0
offset_top = 8.0
offset_right = 638.0
offset_bottom = 31.0

[node name="CurrentWorkLabel" type="Label" parent="DescriptionPanel"]
layout_mode = 2
offset_left = 238.0
offset_top = 62.0
offset_right = 638.0
offset_bottom = 85.0
